Add TimeService utility and adjust ball speed
Introduced a new TimeService utility class for managing delta time calculations, with corresponding header and source files. Updated project files to include the new utility. Also reduced the default ball speed in Ball.h from 0.5f to 0.25f.

--- a/Pong-SFML.vcxproj
+++ b/Pong-SFML.vcxproj
@@ -150,6 +150,8 @@
     <ClInclude Include="Header\GamePlay\Boundary\Boundary.h" />
     <ClInclude Include="Header\GamePlay\GmameplayManager.h" />
     <ClInclude Include="Header\GamePlay\Paddle\Paddle.h" />
+    <ClInclude Include="Header\Utility\TimeService.h" />
+    <ClInclude Include="Source\Utility\TimeService.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Textures\Ball.png" />
