--- a/Pong-SFML.vcxproj
+++ b/Pong-SFML.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Source\GamePlay\Boundary\Boundary.cpp" />
     <ClCompile Include="Source\GamePlay\GameplayManager.cpp" />
     <ClCompile Include="Source\GamePlay\Paddle\Paddle.cpp" />
+    <ClCompile Include="Source\Utility\TimeService.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header\Core\GameLoop.h" />
@@ -151,7 +152,6 @@
     <ClInclude Include="Header\GamePlay\GmameplayManager.h" />
     <ClInclude Include="Header\GamePlay\Paddle\Paddle.h" />
     <ClInclude Include="Header\Utility\TimeService.h" />
-    <ClInclude Include="Source\Utility\TimeService.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Textures\Ball.png" />
