Refactor and rename GameplayManager, update headers
Replaces GmameplayManager with GameplayManager, updating all references and project files. Refactors header files to use forward declarations, removes unnecessary includes and 'using namespace', and improves encapsulation and initialization patterns across core, gameplay, UI, sounds, and utility modules. Cleans up code style, fixes typos, and standardizes resource paths. Improves memory management with proper constructors and destructors.

--- a/Pong-SFML.vcxproj
+++ b/Pong-SFML.vcxproj
@@ -232,7 +232,7 @@
     <ClInclude Include="Header\Event\EventManager.h" />
     <ClInclude Include="Header\GamePlay\Ball\Ball.h" />
     <ClInclude Include="Header\GamePlay\Boundary\Boundary.h" />
-    <ClInclude Include="Header\GamePlay\GmameplayManager.h" />
+    <ClInclude Include="Header\GamePlay\GameplayManager.h" />
     <ClInclude Include="Header\GamePlay\Paddle\Paddle.h" />
     <ClInclude Include="Header\Sounds\SoundManager.h" />
     <ClInclude Include="Header\UI\UIService.h" />
